fixed main page spacing

--- a/PosU/src/App.css
+++ b/PosU/src/App.css
@@ -70,7 +70,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100%;
   margin: 0;
   /*background-color: #f0f0f0;*/
   background: radial-gradient(ellipse at top, #f0f0f0, transparent),
